<resources>
    <string name="app_name">pemobfinalproject</string>
    <string name="apptitle">appTitle</string>
    <string name="go_fit">Go-Fit</string>
    <string name="appdesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="hello">Hello!</string>
    <string name="registerDesc">Register to get started</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tanggal_lahir">Tanggal Lahir (DD/MM/YY)</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="lets_sign_you_in">Let`s sign you in.</string>
    <string name="welcome_back">Welcome Back.</string>
    <string name="you_ve_been_missed">You`ve been missed!</string>
    <string name="dont_have_an_account">don`t have an account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hello_user">Hello User!</string>
    <string name="greeting">Are You Feeling Well Today?</string>
    <string name="search">search</string>
    <string name="covid">Covid</string>
    <string name="checkup">Checkup</string>
    <string name="medicine">Medicine</string>
    <string name="more">More</string>
    <string name="our_service">Our Service</string>

    <string name="mapbox_access_token">sk.eyJ1IjoiYXN0cm9jYXQiLCJhIjoiY2twbGRyeWw5MDRvdDJ2cnc0bWxwa3ltciJ9.qqTk_FgqFh4nUMnMjBc9nQ</string>
    <string name="home">Home</string>
    <string name="message">message</string>
    <string name="history">history</string>
    <string name="profile">profile</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="txtaccountpage">txtAccountPage</string>
    <string name="news">News</string>
    <string name="covid_test_swab">Covid Test Swab</string>
    <string name="newsContent1">swab covid di lakukan secara serentak</string>
</resources>