<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:textColor="@color/txtColor1"
        android:title="@string/home"
        />

    <item
        android:id="@+id/menu_message"
        android:icon="@drawable/bubble_chat"
        android:textColor="@color/txtColor1"
        android:title="@string/message"
        />

    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/history_2"
        android:textColor="@color/txtColor1"
        android:title="@string/history"
        />

    <item
        android:id="@+id/userNavbar"
        android:icon="@drawable/usernavbar"
        android:textColor="@color/txtColor1"
        android:title="@string/profile"
        />
</menu>