<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".mainMenu"
        android:padding="14dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.0" />

        <TextView
            android:id="@+id/textHelloUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/hello_user"
            android:textColor="@color/txtColor1"
            android:textSize="34sp"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/textGreeting"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toTopOf="@id/topGuideline" />

        <TextView
            android:id="@+id/textGreeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/greeting"
            android:textColor="@color/txtColor2"
            android:textSize="20sp"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/search_bar"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/textHelloUser" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/Service"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/textGreeting">

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/doctors2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/white_rounded_background"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/imageHeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/searchBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:background="@null"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/txtColor5"
                    android:textSize="16sp"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageHeader"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="56dp"
                    android:src="@drawable/search_icon" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Service"
            android:layout_width="0dp"
            android:layout_height="114dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/search_bar">

            <TextView
                android:id="@+id/textViewService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/our_service"
                android:textColor="@color/txtColor1"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/allService"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <GridLayout
                android:id="@+id/allService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:useDefaultMargins="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewService">


                <ImageView
                    android:id="@+id/covidPic"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/virus" />

                <TextView
                    android:id="@+id/tvCovid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/covid"
                    android:textColor="@color/txtColor2" />

                <ImageView
                    android:id="@+id/checkupPic"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:src="@drawable/medical_checkup" />

                <TextView
                    android:id="@+id/tvCheckup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/checkup"
                    android:textColor="@color/txtColor2" />

                <ImageView
                    android:id="@+id/Medicine"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/medicine" />

                <TextView
                    android:id="@+id/TVMedicine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/medicine"
                    android:textColor="@color/txtColor2" />

                <ImageView
                    android:id="@+id/doctor"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:src="@drawable/more" />

                <TextView
                    android:id="@+id/TVDoctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/more"
                    android:textColor="@color/txtColor2" />

            </GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
